fixed selected-entry-wrapper vertical content alignment

--- a/less/combobox.less
+++ b/less/combobox.less
@@ -1,6 +1,8 @@
 .tr-combobox-selected-entry-wrapper {
   flex: 1 1 auto;
   overflow: hidden;
+  display:flex;
+  align-items: center; // if the template doesn't take the whole space...
 
   .tr-combobox-entry * {
     cursor: text;
